--- a/tests/fake_project/fake/templates/test.html
+++ b/tests/fake_project/fake/templates/test.html
@@ -7,9 +7,7 @@
     <title>django-gesha test page</title>
   </head>
   <body>
-
-    {% load gesha static %}
-    {% jscontext %}
+    {% load gesha static %}{% jscontext %}
     <script src="{% static 'gesha/dist/js/django-gesha.bundle.min.js' %}">
     </script>
   </body>
